force-app/force-app/force-app/main/default/objects/Quote/fields/Billing_Continent__c.field-meta.xml
<CustomField>
    <fullName>Billing_Continent__c</fullName>
    <label>Continent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Oceania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>