force-app/force-app/force-app/main/default/objects/Quote/fields/Billing_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Pincode__c</fullName>
    <label>PinCode/ZipCode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>