force-app/force-app/force-app/main/default/objects/Quote/fields/COMMISIONERATE__c.field-meta.xml
<CustomField>
    <fullName>COMMISIONERATE__c</fullName>
    <formula>&apos;CHENNAI I COMMISIONERATE , NANDANAM, CHENNAI, TAMILNADU  600034&apos;</formula>
    <label>COMMISIONERATE</label>
    <type>Text</type>
</CustomField>