force-app/force-app/force-app/main/default/objects/Quote/fields/Credit_Term__c.field-meta.xml
<CustomField>
    <fullName>Credit_Term__c</fullName>
    <label>Credit Term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>