force-app/force-app/force-app/main/default/objects/Quote/fields/Customer_Enquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Enquiry_Date__c</fullName>
    <label>Customer Enquiry Date</label>
    <type>Date</type>
</CustomField>