force-app/force-app/force-app/main/default/objects/Quote/fields/Customer_Enquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Enquiry_Number__c</fullName>
    <label>Customer Enquiry Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>