force-app/force-app/force-app/main/default/objects/Quote/fields/Customer_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>