force-app/force-app/force-app/main/default/objects/Quote/fields/Dispatch_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Schedule__c</fullName>
    <label>Dispatch Schedule</label>
    <length>50</length>
    <type>Text</type>
</CustomField>