force-app/force-app/force-app/main/default/objects/Quote/fields/Display_discount_in_Quote__c.field-meta.xml
<CustomField>
    <fullName>Display_discount_in_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display discount in Quote?</label>
    <type>Checkbox</type>
</CustomField>