force-app/force-app/force-app/main/default/objects/Quote/fields/DIVISION__c.field-meta.xml
<CustomField>
    <fullName>DIVISION__c</fullName>
    <formula>&apos;DIVISION CHENNAI D,NANDANAM,CHENNAI,TAMILNADU 600034&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIVISION</label>
    <type>Text</type>
</CustomField>