force-app/force-app/force-app/main/default/objects/Quote/fields/Enq_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Enq_Ref_No__c</fullName>
    <formula>Opportunity.Account.Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enq Ref No</label>
    <type>Text</type>
</CustomField>