force-app/force-app/force-app/main/default/objects/Quote/fields/EXCISE_CONTROL_CODE__c.field-meta.xml
<CustomField>
    <fullName>EXCISE_CONTROL_CODE__c</fullName>
    <formula>&apos;AAACE9718NXM003&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EXCISE CONTROL CODE</label>
    <type>Text</type>
</CustomField>