force-app/force-app/force-app/main/default/objects/Quote/fields/Fitment_Charges_INR__c.field-meta.xml
<CustomField>
    <fullName>Fitment_Charges_INR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fitment Charges INR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>