force-app/force-app/force-app/main/default/objects/Quote/fields/GST_no__c.field-meta.xml
<CustomField>
    <fullName>GST_no__c</fullName>
    <formula>&apos;33AAACE9718N1ZB&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST no</label>
    <type>Text</type>
</CustomField>