force-app/force-app/force-app/main/default/objects/Quote/fields/HS_CODE__c.field-meta.xml
<CustomField>
    <fullName>HS_CODE__c</fullName>
    <label>HS CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>