force-app/force-app/force-app/main/default/objects/Quote/fields/IEC_NO__c.field-meta.xml
<CustomField>
    <fullName>IEC_NO__c</fullName>
    <formula>&apos;0402020162&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IEC NO</label>
    <type>Text</type>
</CustomField>