force-app/force-app/force-app/main/default/objects/Quote/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TO CUSTOMER ACCOUNT</fullName>
                <default>true</default>
                <label>TO CUSTOMER ACCOUNT</label>
            </value>
            <value>
                <fullName>TO EMERALD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>