force-app/force-app/force-app/main/default/objects/Quote/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOMESTIC</fullName>
            </value>
            <value>
                <fullName>OVERSEAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>