force-app/force-app/force-app/main/default/objects/Quote/fields/Merchant_Tax__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Tax__c</fullName>
    <formula>(Tax_For_Merchant__r.Rate__c)* (Quote_Total_Price__c +  Quote_Tax__c +  Freight_INR__c +   Freight_Tax_Amount__c + Other_Charges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>