force-app/force-app/force-app/main/default/objects/Quote/fields/Org_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Org_Ref_No__c</fullName>
    <displayFormat>EM-{00000}</displayFormat>
    <label>Org Ref No</label>
    <type>AutoNumber</type>
</CustomField>