force-app/force-app/force-app/main/default/objects/Quote/fields/Other_Charges_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Remarks__c</fullName>
    <label>Other Charges Remarks</label>
    <type>TextArea</type>
</CustomField>