force-app/force-app/force-app/main/default/objects/Quote/fields/Port_Of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Port_Of_Discharge__c</fullName>
    <label>Port Of Discharge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>