force-app/force-app/force-app/main/default/objects/Quote/fields/PORT_OF_LOADING__c.field-meta.xml
<CustomField>
    <fullName>PORT_OF_LOADING__c</fullName>
    <label>PORT OF LOADING</label>
    <length>50</length>
    <type>Text</type>
</CustomField>