force-app/force-app/force-app/main/default/objects/Quote/fields/Quote_Tax__c.field-meta.xml
<CustomField>
    <fullName>Quote_Tax__c</fullName>
    <label>Tax</label>
    <summarizedField>QuoteLineItem.Tax_Amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>