force-app/force-app/force-app/main/default/objects/Quote/fields/Quote_Total_Price_With_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Price_With_Discount__c</fullName>
    <label>Total Price With Discount</label>
    <summarizedField>QuoteLineItem.QLI_Total_Price__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>