force-app/force-app/force-app/main/default/objects/Quote/fields/RANGE_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>RANGE_ADDRESS__c</fullName>
    <formula>&apos;RANGE GUMMIDIPOONDI II, BALAKRISHNAPURAM, TAMILNADU, GUMMIDIPOONDI -  601201&apos;</formula>
    <label>RANGE ADDRESS</label>
    <type>Text</type>
</CustomField>