force-app/force-app/force-app/main/default/objects/Quote/fields/Sales_Employee__c.field-meta.xml
<CustomField>
    <fullName>Sales_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>