force-app/force-app/force-app/main/default/objects/Quote/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipping_Continent__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Burkina</fullName>
            </value>
            <value>
                <fullName>Burundi</fullName>
            </value>
            <value>
                <fullName>Cameroon</fullName>
            </value>
            <value>
                <fullName>Cape</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Chad (Tchad)</fullName>
            </value>
            <value>
                <fullName>Comoros</fullName>
            </value>
            <value>
                <fullName>Democratic</fullName>
            </value>
            <value>
                <fullName>Côte</fullName>
            </value>
            <value>
                <fullName>Djibouti</fullName>
            </value>
            <value>
                <fullName>Equatorial</fullName>
            </value>
            <value>
                <fullName>Egypt</fullName>
            </value>
            <value>
                <fullName>Eritrea</fullName>
            </value>
            <value>
                <fullName>Ethiopia</fullName>
            </value>
            <value>
                <fullName>Gabon</fullName>
            </value>
            <value>
                <fullName>The</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Kenya</fullName>
            </value>
            <value>
                <fullName>Lesotho</fullName>
            </value>
            <value>
                <fullName>Liberia</fullName>
            </value>
            <value>
                <fullName>Libya</fullName>
            </value>
            <value>
                <fullName>Madagascar</fullName>
            </value>
            <value>
                <fullName>Malawi</fullName>
            </value>
            <value>
                <fullName>Mali</fullName>
            </value>
            <value>
                <fullName>Mauritania</fullName>
            </value>
            <value>
                <fullName>Mauritius</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>