force-app/force-app/force-app/main/default/objects/Quote/fields/Tax_For_Freight__c.field-meta.xml
<CustomField>
    <fullName>Tax_For_Freight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax For Freight</label>
    <referenceTo>Tax_Code__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>