force-app/force-app/force-app/main/default/objects/Quote/fields/Tax_For_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Tax_For_Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax For Merchant</label>
    <referenceTo>Tax_Code__c</referenceTo>
    <relationshipLabel>Quotes (Tax For Merchant)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>