force-app/force-app/force-app/main/default/objects/Quote/fields/Tax_Value_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Tax_Value_In_Words__c</fullName>
    <label>Tax Value In Words</label>
    <type>TextArea</type>
</CustomField>