force-app/force-app/force-app/main/default/objects/Quote/fields/Total_Amount_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_In_Words__c</fullName>
    <label>Total Amount In Words</label>
    <type>TextArea</type>
</CustomField>