force-app/force-app/force-app/main/default/objects/Quote/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <label>Total List Price</label>
    <summarizedField>QuoteLineItem.Total_List_Price_tEMP__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>