force-app/force-app/force-app/main/default/objects/Quote/fields/Total_Price_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_With_Tax__c</fullName>
    <description>Here Total field calculating total amount + tax amount</description>
    <formula>Quote_Total_Price_With_Discount__c +  Quote_Tax__c +  Other_Charges__c + Freight_INR__c +  Freight_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>