force-app/force-app/force-app/main/default/objects/Quote/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <formula>ADDMONTHS( CreatedDate ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>