force-app/force-app/force-app/main/default/objects/Quote/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <defaultValue>&quot;30 DAYS&quot;</defaultValue>
    <label>Validity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>