force-app/force-app/force-app/main/default/objects/Quote/fields/Zone_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Zone_Ref_No__c</fullName>
    <formula>Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Ref No</label>
    <type>Text</type>
</CustomField>